<resources>
    <string name="app_name">buy4all</string>
    <string name="update">Update</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="emailsignup">Email</string>
    <string name="passwordsignup">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_mesignup">Remember Me</string>
    <string name="sign_upbut">Sign Up</string>
    <string name="allready_have_an_acount_sign_in">Already have an account? SIGN IN</string>
    <string name="guest">GUEST</string>
    <string name="sign_upmain">Sign Up</string>
    <string name="sign_inmain">Sign In</string>
    <string name="room_preference">Predilection</string>
    <string name="sport">SPORT</string>
    <string name="gadgets">Gadgets</string>
    <string name="skip">SKIP</string>
    <string name="all">ALL</string>
    <string name="sign_uppref">Sign Up</string>
    <string name="sportpref">SPORT</string>
    <string name="gadgetspref">Gadgets</string>
    <string name="skippref">SKIP</string>
    <string name="allpref">ALL</string>
    <string name="updatepref">Update</string>
    <string name="room_preferenceset">Predilection</string>
    <string name="log_out">Log Out</string>
    <string name="usernameupd">Username</string>
    <string name="mailupd">Email</string>
    <string name="passwordupd">Password</string>
    <string name="enter_new_mail">Enter new mail</string>
    <string name="updatemail">Update</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="updatepass">Update</string>
    <string name="usernameup">Username</string>
    <string name="updateuser">Update</string>
    <string name="enter_post_title">Enter Post Title</string>
    <string name="enter_post_description">Enter Post Description</string>
    <string name="enter_post_price">Enter Post Price</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="add_post">Add Post</string>
    <string name="sign_inaddguest">Sign In</string>
    <string name="sign_upaddguest">Sign Up</string>
    <string name="sign_infavguest">Sign In</string>
    <string name="sign_upfavguest">Sign Up</string>
    <string name="history">History</string>
    <string name="my_announcements">My Announcements</string>
    <string name="sign_inprofguest">Sign In</string>
    <string name="sign_upprofguest">Sign Up</string>
    <string name="homebottom">Home</string>
    <string name="bottom">Service</string>
    <string name="addbottom">Add</string>
    <string name="favoritebottom">Favorite</string>
    <string name="profilebottom">Profile</string>
    <string name="remember_my_phone_no">Remember My Phone No</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="Service">servicech</string>
    <string name="service">Service</string>
    <string name="change_mail">Change Mail</string>
    <string name="please_enter_your_new_mail">Please enter your new mail</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="new_mail">New Email</string>
    <string name="change">Change</string>
    <string name="go_back">Go back</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="new_password">New Password</string>
    <string name="changepas">Change</string>
    <string name="go_backp">Go back</string>
    <string name="go_backu">Go back</string>
    <string name="changeu">Change</string>
    <string name="new_username">New Username</string>
    <string name="enter_current_passwordus">Enter current password</string>
    <string name="please_enter_your_new_username">Please enter your new username</string>
    <string name="change_username">Change Username</string>
    <string name="warning">Warning</string>
    <string name="you_are_about_to_delete_your_account_are_you_sure_you_want_to_delete_your_account">"         You are about to delete your account. Are you sure you want to delete your account?     "</string>
    <string name="delete_account">Delete Account</string>
    <string name="go_backda">Go back</string>
    <string name="delete_accountset">Delete Account</string>
    <string name="update_post">Update Post</string>
    <string name="enter_post_title_up">Enter Post Title</string>
    <string name="enter_post_description_up">Enter Post Description</string>
    <string name="enter_post_price_up">Enter Post Price</string>
    <string name="enter_phoneno_up">Enter PhoneNo</string>
    <string name="update_p">Update</string>
    <string name="test_user">Test User</string>
    <string name="edit_post">Edit</string>
    <string name="about_us1">Buy4All is a marketplace app where you can buy and sell products and services easily. Whether you\'re looking for electronics, fashion, services, or more, Buy4All connects you with trusted users to make your transactions smooth and secure.</string>
    <string name="about_buy4all">About Buy4All</string>
    <string name="contact_with_us">Contact With Us</string>
    <string name="aboutusemail">📧 Email: grigoravagyan482@gmail.com</string>
    <string name="phoneaboutus">📞 Phone: +37444238399</string>
    <string name="whatsappaboutus">💬 WhatsApp: +37444238399</string>
    <string name="viberaboutus">📱 Viber: +37443238399</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="policy">General Overview At Buy4All, protecting your personal data privacy is important to us. That’s why we are committed to safeguarding the personal information of all visitors and users of our website and mobile application (“Services”). Through this Privacy Policy (“Privacy Policy”), we explain how we collect your data, why we need it, and how we use it. Please read this Privacy Policy carefully, as it contains important information about how we process any personal data you provide to us. The Information We Collect and How We Use It We only collect the information necessary for: Providing and improving our services: We use your data to enhance our Services and tailor them to your preferences. This is essential for us to understand how our Services are used lawfully and to find and implement ways to grow and develop our business. It also enables us to pursue our legitimate interests in improving our Services, increasing their efficiency and user engagement, and gaining insights into usage patterns. At Buy4All, it is vital for us to adapt to your individual needs in order to assist you in finding relevant information, products, and services, including helping sellers market and sell their products effectively. Sending you updates about improvements and new services: To inform you about new products, services, and promotions, and to provide you with content we believe may be of interest, we may send you messages and materials directly via email or other means. Ensuring the security and safety of our services: We use your data for safety and security purposes, which may include sharing it when necessary. This is done to ensure the security of our Services, prevent harm to individuals or property, prevent crimes, enforce or protect legal rights, and defend against damage to our systems or users or protect the legitimate interests of third parties. This includes protecting our community from spam, fraud, abuse, intellectual property violations, crimes, and all types of security risks. We use your data to deliver and improve our Services, process payments and invoices, verify your identity, and generate reports and summaries for analytical purposes. Data We Collect About You When you use the Services or create login credentials, you may be asked to provide information about yourself, including: (i) Your name and contact details such as email address and phone number; (ii) Information that helps us verify your identity; (iii) Location data; (iv) Data required for invoicing and payment processing; (v) Other data we may require from time to time to provide Services and comply with legal obligations. This information is essential for us to provide you with our Services. Failure to provide such data may result in delays or inability to provide the Services. Who We Share Your Personal Data With We may share all or part of the above-mentioned data in the following cases: Under a search warrant, court order, or other legal obligation; To protect the rights, property, or safety of Buy4All users, Buy4All itself, or the general public; At your request (e.g., if you authorize us to share data with other users). Data We Retain and Process We may retain your data as necessary to facilitate use of the Services, personalize your experience, prevent fraud and abuse, or as required by law. This may include your name, address, email address, phone number, and purchase history. While we make every effort to store your data securely, we cannot guarantee its absolute safety. You can access and update certain data through your account login. Cookies When using our Services, we may send small files to your device (“Cookies”) to recognize it, monitor behavior on our website, and identify interest areas to tailor our Services to your preferences. We may collect and store personal data through Cookies and link them to personal information you have provided. You can configure your browser to reject Cookies, but this may restrict access to certain features. Security Measures We implement security policies, rules, and technical measures to protect personal data under our control from unauthorized access, misuse, disclosure, destruction, or accidental loss. We have procedures in place to deal with suspected data breaches. We will notify you and the appropriate regulatory authority if required by law. However, you are solely responsible for keeping your password and account details confidential. Ultimately, you are responsible for maintaining the confidentiality of your login credentials and personal information. Always be cautious with your data. We are not responsible for and cannot control how others use the information you provide them. You should be careful about what personal information you share with others through the Services. Additionally, we are not responsible for the accuracy of personal or other information received through the Services from other users. You release us from liability related to the content of any such information. If you have concerns or suspect unauthorized use of your account or password, please contact us immediately. We may deactivate or suspend your account at any time. Data Deletion We reserve the right to delete and destroy all data collected about you after your account is deactivated, unless you request otherwise. You have the right to request deletion of your data. Depending on the Services we provided, we may be legally required to retain some data for up to five years after a deletion request. We cannot continue providing Services if you request data deletion. You can request data deletion by contacting our customer service or through the “Account” section under “Settings” in Buy4All. Policy Updates We reserve the right to change this policy from time to time. Updated policies will be posted on our website, and by continuing to access and use our Services after changes are made, you agree to be bound by the updated policy.</string>
</resources>