<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#daeae7"
    android:layout_height="match_parent">

    <!-- Title Text -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/update"
        android:textSize="39sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Username Button -->

    <!-- Mail Button -->

    <Button
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="@color/black"
        android:text="@string/usernameupd"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/mailupd"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toEndOf="@id/username"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@id/password" />

    <!-- Password Button -->
    <Button
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/passwordupd"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toEndOf="@id/mail"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backupd"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="#daeae7"
        android:contentDescription="Null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
